fixed mobile overflow

--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -96,6 +96,16 @@
         cursor: pointer;
     }
     @media screen and (max-width: 768px) {
+      .profile {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+          width: 98vw;
+          height: 100vh;
+          overflow: hidden;
+      
+      }
    
       .item {
         width: 90%;
